# 2015-mini-smart-vehicles

./: README.md  arduinoG8Extend.ino  arduinoG8extended.ino  arduinoSketchG8.ino  calibration.ino  driving.ino  group-11  group-6  overriding.ino
FastRunningMedian/: FastRunningMedian.h
Group-5/: Members
Group-6/: Group-6
group-1/Arduino/: MAIN_RECEIVE.ino  MAIN_SEND.ino  SR04_US.ino  SR08_US.ino  inftared.ino  wheelEncoder.ino
group-10/: readme.md
group-11/: Driver(forLangeDetection).cpp  LaneDetector with canny.cpp  LaneDetector(completed).cpp  README.md  SteeringData(intersection).cpp  compile.sh  members.txt  readme.txt  simple lane detector.cpp  simple overtaking logic.cpp
group-11/Acceptance Test (demo_material)/: oraldemo_HLB(Proxy).c  oraldemo_LLB.ino
group-11/LaneDetector/: LaneDetector(Finished simulation).cpp  LaneDetector(final for track).cpp  LaneDetector(intersection).cpp  LaneDetector(v2).cpp  LaneDetector(v5).cpp  LaneDetector(v6).cpp  Lanedetector(dennisalgorithm).cpp  Lanedetector(v.4).cpp
group-11/Overtaking/: Driver.cpp  Proxy(workingNotOptimal).cpp  Proxy.cpp  Sensor  overtaking.cpp
group-11/Parking/: Driver(finishedParallel).cpp  Driver(finished_for_medium).cpp  Driver(for_parking_on_track).cpp  Driver(oldparking).cpp  Driver(parking-hard).cpp  Driver(parkinglot1).cpp  ProxyParking.cpp  Sensors.ino  Vehicle.ino  sensors.ino  vehicleWithParsing.ino
group-11/hardware/: ESC.ino  all_sensors.ino  infrared.ino  optimizedsensors.ino  overtaking.ino  proxy.ino  proxyOverride.ino  receiveProxy (vehicleControl).ino  receiver.ino  sensors.ino  vehicle.ino
group-11/intersection/: Driver(intersection)  LandeDetector(intersection)  (+1 more)
group-2/: Message to group 2  README.md
group-3/: CONFIGURATION.tex  Data.odvd  Driver(parker).cpp  Driver.cpp  LaneDetector.cpp  LaneDetectorUnfinished  LaneFollowing.rec  Overtaking  Overtaking-medium  OvertakingHard  members.txt  startup.sh
group-3/Proxy/: CMakeLists.txt  README.md  message.proto  proxy.cpp
group-4/: .gitignore  README.md
group-4/OpenDaVINCI-msv/apps/joy_bringer/: CMakeLists.txt  JoyBringer.cpp  JoyBringer.h  MainModule.cpp
group-4/OpenDaVINCI-msv/apps/serial_killer/: CMakeLists.txt  MainModule.cpp  SerialKiller.cpp  SerialKiller.h
group-5/: Group-5  Lanedetector.cpp  Proxy  driver.cpp
group-6/: Message to group 6
group-7/: Data.odvd  Driver.cpp  LaneDetector.cpp  Netstrings.cpp  README.md  intersectionDriver.cpp  protocol.c  screenlog.0
group-8/: README.md~  xcompile.md
group-9/: README.md
(+255 files in other folders)
